--- a/src/components/Aside/test.css
+++ b/src/components/Aside/test.css
@@ -11,6 +11,9 @@
 }
 
 .a {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   flex: 6;
   display: flex;
   justify-content: center;
@@ -21,6 +24,9 @@
 }
 
 .b {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   flex: 6;
   display: flex;
   justify-content: center;
