--- a/src/components/ChatBox/ChatChat.css
+++ b/src/components/ChatBox/ChatChat.css
@@ -122,46 +122,96 @@ textarea:focus {
 }
 .counterpartChat {
   display: flex;
+  margin-top: 10px;
 }
 .chatImgIcon {
   width: 27px;
   height: 26px;
-  margin: 10px 5px 10px 15px;
+  margin: 0px 5px 10px 10px;
 
   padding: 8px 7px 1px 3px;
-  background-color: #ffe576;
+  background-color: #e8d176;
   border-radius: 100%;
 }
 
-.chatContent {
+.chatZZone .counterpartChat .details {
+  margin-left: 5px;
+  /* margin-right: 10px; */
+  max-width: calc(100% - 80px);
+}
+
+.chatZZone .counterpartChat .details .counterpartName {
+  font-size: 12px;
+}
+
+.chatZZone .counterpartChat .details .chatContent {
+  background: #ffe576;
+  color: black;
+  border-radius: 0px 14px 14px 14px;
+  /* font-family: 'Noto Sans KR', sans-serif; */
+  /* font-weight: 400; */
+  max-width: 175px;
+  font-size: 14px;
+  word-wrap: break-word;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 8px 12px 8px 12px;
+  /* --saf-0: rgba(var(--sk_foreground_low, 29, 28, 29), 0.13);
+  box-shadow: 0 0 0 1px var(--saf-0), 0 1px 3px 0 rgba(0, 0, 0, 0.08); */
+  /* box-shadow: 0 0 32px rgb(0 0 0 / 8%), 0rem 16px 16px -16px rgb(0 0 0 / 10%); */
+}
+/* .chatContent {
   align-self: center;
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 400;
   max-width: 194px;
   font-size: 14px;
-}
+} */
 
 .chatArriveTime {
-  align-self: center;
+  align-self: flex-end;
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 400;
-  font-size: 11px;
+  font-size: 10px;
   color: #777777;
   margin-left: 5px;
+  margin-bottom: 5px;
 }
 
 .mySendChat {
   display: flex;
   justify-content: flex-end;
+  margin-top: 10px;
 }
 
+.chatZZone .mySendChat .details {
+  /* margin-left: 10px; */
+  margin-right: 10px;
+  max-width: calc(100% - 110px);
+}
+
+.chatZZone .mySendChat .details .chatContent {
+  background: rgba(17, 17, 17, 0.9);
+  color: rgb(253, 253, 253);
+  border-radius: 14px 0px 14px 14px;
+  /* font-family: 'Noto Sans KR', sans-serif; */
+  /* font-weight: 400; */
+  max-width: 175px;
+  font-size: 14px;
+  word-wrap: break-word;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 8px 12px 8px 12px;
+  /* box-shadow: 0 0 32px rgb(0 0 0 / 8%), 0rem 16px 16px -16px rgb(0 0 0 / 10%); */
+}
 .chatSendTime {
-  align-self: center;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-weight: 400;
-  font-size: 11px;
+  align-self: flex-end;
+  /* font-family: 'Noto Sans KR', sans-serif; */
+  /* font-weight: 400; */
+  font-size: 10px;
   color: #777777;
   margin-right: 8px;
+  margin-bottom: 5px;
 }
 
 .chatImgIconMy {
