--- a/src/components/CreateChannel/CreateChannel.css
+++ b/src/components/CreateChannel/CreateChannel.css
@@ -1,22 +1,15 @@
 .createChannel .modal {
   width: 440px;
   height: 300px;
-  /* margin: 46px 8px 0 9px; */
   padding: 30px 40px 0px 40px;
   border-radius: 25px;
   background-color: rgba(17, 17, 17, 0.9);
-  position: absolute;
-  /* justify-content: flex-end; */
-  /* align-items: flex-end; */
-  /* top: 35%;
-  left: 30%; */
+
   position: absolute;
   top: 50%;
-  margin-top: -120px;
   left: 50%;
-  margin-left: -200px;
+  transform: translate(-50%, -50%);
   z-index: 100;
-  /* color: wheat; */
 }
 
 .createChannel .closeButton {
