--- a/src/components/ChatList/ChatList.css
+++ b/src/components/ChatList/ChatList.css
@@ -61,3 +61,13 @@
   height: 200px;
   top: 285px;
 }
+
+.ChatList .muteModal {
+  width: 300px;
+  height: 30px;
+  /* margin: 102px 3px 22px 5px; */
+  /* padding: 13px 59px 12px 60px; */
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #ffffff;
+}
