--- a/src/components/CreateChannel/CreateChannel.css
+++ b/src/components/CreateChannel/CreateChannel.css
@@ -1,6 +1,6 @@
 .createChannel .modal {
   width: 440px;
-  height: 300px;
+  height: 330px;
   padding: 30px 40px 0px 40px;
   border-radius: 25px;
   background-color: rgba(17, 17, 17, 0.9);
@@ -216,4 +216,72 @@
 
 .createChannel .test {
   white-space: nowrap;
+}
+
+.createChannel .hidden {
+  display: none;
+}
+
+.createChannel .entry {
+  height: 25px;
+  position: absolute;
+  width: 160px;
+}
+.createChannel .entry2 {
+  height: 25px;
+  position: absolute;
+  width: 160px;
+  top: 30px;
+  left: 100px;
+}
+
+.createChannel .entry:nth-child(1) {
+  left: 10px;
+  top: 10px;
+}
+
+.createChannel .entry-label {
+  width: 30px;
+  cursor: pointer;
+  margin-top: 1px;
+  padding-left: 33px;
+  user-select: none;
+  color: white;
+  -moz-user-select: none;
+}
+.createChannel .entry-label2 {
+  width: 30px;
+  cursor: pointer;
+  margin-top: 1px;
+  padding-left: 33px;
+  user-select: none;
+  color: white;
+  -moz-user-select: none;
+}
+.createChannel .createChannel .circle {
+  border: 2px solid white;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 20px;
+  position: absolute;
+  transition: border-color 300ms;
+  width: 20px;
+}
+
+.createChannel .highlight {
+  background: #ffe576;
+  border-radius: 50%;
+  height: 12px;
+  top: 35px;
+  left: 6px;
+  pointer-events: none;
+  position: absolute;
+  transition: transform 400ms cubic-bezier(0.175, 0.885, 0.32, 1.2);
+  transform: translateX(0px);
+  width: 12px;
+}
+
+.createChannel .warning {
+  margin-left: 10px;
+  color: #ffe576;
 }
