--- a/src/components/VoiceChatZZone/voiceChatChat.css
+++ b/src/components/VoiceChatZZone/voiceChatChat.css
@@ -1,4 +1,4 @@
-.ChatZZone.track-vertical {
+.voiceChatZZone.track-vertical {
   top: 0px;
   width: 50px;
   bottom: 16px;
@@ -6,7 +6,7 @@
   border-radius: 3px;
   background: rgba(255, 255, 255, 0.111);
 }
-.ChatZZone.track-vertical .ChatZZone.thumb-vertical {
+.voiceChatZZone.track-vertical .ChatZZone.thumb-vertical {
   position: relative;
   display: block;
   width: 90%;
@@ -15,7 +15,7 @@
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-.ChatZZone.track-horizontal {
+.voiceChatZZone.track-horizontal {
   position: absolute;
   height: 6px;
   right: 2px;
@@ -23,7 +23,7 @@
   left: 2px;
   border-radius: 3px;
 }
-.ChatZZone.track-horizontal .ChatZZone.thumb-horizontal {
+.voiceChatZZone.track-horizontal .ChatZZone.thumb-horizontal {
   position: relative;
   display: block;
   height: 100%;
@@ -32,7 +32,7 @@
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-.ChatZZone.view {
+.voiceChatZZone.view {
   position: absolute;
   top: 0px;
   left: 0px;
@@ -43,19 +43,19 @@
   margin-bottom: -17px !important;
 }
 
-.chatBBox {
+.voiceChatZZone .chatBBox {
   display: flex;
   flex-direction: column;
 }
 
-.backSpace {
+.voiceChatZZone .backSpace {
   width: 7px;
   height: 17px;
   margin-top: 20px;
   margin-left: 15px;
 }
 
-.chatHeader {
+.voiceChatZZone .chatHeader {
   height: 63px;
   background-color: white;
   display: flex;
@@ -63,17 +63,17 @@
   /* border-bottom: solid 0.5px; */
 }
 
-.middle {
+.voiceChatZZone .middle {
   margin-top: 8px;
 }
 
-.chatTitle {
+.voiceChatZZone .chatTitle {
   font-size: 15px;
   font-weight: 700;
   font-family: 'Noto Sans KR', sans-serif;
 }
 
-.chatTag {
+.voiceChatZZone .chatTag {
   margin-top: 8px;
   text-align: center;
   font-size: 12px;
@@ -81,25 +81,25 @@
   color: #5206b9;
 }
 
-.hamBurger {
+.voiceChatZZone .hamBurger {
   margin-top: 20px;
   margin-right: 20px;
   width: 17px;
   height: 16px;
 }
 
-.chatMiddle {
+.voiceChatZZone .chatMiddle {
   width: 100%;
   height: 54px;
   background-color: #f4f4f4;
 }
 
-.chatZZone {
+.voiceChatZZone .chatZZone {
   height: 274px;
   width: 100%;
 }
 
-.chatInput {
+.voiceChatZZone .chatInput {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -107,7 +107,7 @@
   height: 58px;
 }
 
-.plusButton {
+.voiceChatZZone .plusButton {
   margin-left: 10px;
   width: 24px;
   height: 24px;
@@ -115,7 +115,7 @@
   object-fit: contain; */
 }
 
-.iinput {
+.voiceChatZZone .iinput {
   display: flex;
   align-items: center;
   width: 220px;
@@ -124,7 +124,7 @@
   border-radius: 40px;
 }
 
-.submit {
+.voiceChatZZone .submit {
   font-size: 12px;
   display: flex;
   justify-content: center;
@@ -138,36 +138,36 @@
   font-weight: 600;
 }
 
-.ChatZZone .ScrollbarsCustom-Track.ScrollbarsCustom-TrackY {
+.voiceChatZZone .ScrollbarsCustom-Track.ScrollbarsCustom-TrackY {
   background-color: white !important;
   width: 5px !important;
   left: 320px !important;
   /* height: 100% !important; */
 }
 
-.ChatZZone .ScrollbarsCustom-Thumb.ScrollbarsCustom-ThumbY {
+.voiceChatZZone .ScrollbarsCustom-Thumb.ScrollbarsCustom-ThumbY {
   background: #dddddd !important;
   /* height: 95px !important; */
 }
 
-.chatZZone .ScrollbarsCustom-Track.ScrollbarsCustom-TrackY {
+.voiceChatZZone .ScrollbarsCustom-Track.ScrollbarsCustom-TrackY {
   background-color: white !important;
   width: 5px !important;
   left: 320px !important;
   /* height: 100% !important; */
 }
 
-.chatZZone .ScrollbarsCustom-Thumb.ScrollbarsCustom-ThumbY {
+.voiceChatZZone .ScrollbarsCustom-Thumb.ScrollbarsCustom-ThumbY {
   background: #dddddd !important;
   /* height: 95px !important; */
 }
 
-.chatZZone .DateWrapper {
+.voiceChatZZone .DateWrapper {
   display: flex;
   justify-content: center;
 }
 
-.chatZZone .DateButton {
+.voiceChatZZone .DateButton {
   font-weight: bold;
   font-size: 13px;
   height: 28px;
@@ -188,7 +188,7 @@
   outline: none;
 }
 
-.chatZZone .NoticeButton {
+.voiceChatZZone .NoticeButton {
   font-weight: bold;
   font-size: 13px;
   height: 28px;
