--- a/src/components/CreateChannel/CreateChannel.css
+++ b/src/components/CreateChannel/CreateChannel.css
@@ -288,8 +288,9 @@
 
 @media (max-width: 766px) {
   .createChannel .modal {
-    width: 90%;
+    width: 90vw;
     height: 100vh;
+    border-radius: 0px;
   }
   .createChannel .closeButton {
     cursor: pointer;
@@ -299,5 +300,12 @@
     height: 20px;
     left: calc(100vw - 10px);
     margin: 0 !important;
+  }
+  .mobile {
+    width: 90vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
