style: 모바일 채팅방 생성 css 수정

--- a/src/components/CreateChannel/CreateChannel.css
+++ b/src/components/CreateChannel/CreateChannel.css
@@ -308,4 +308,16 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+  .createChannel .entry2 {
+    height: 25px;
+    position: absolute;
+    width: 160px;
+    top: 0px;
+    left: 100px;
+  }
+
+  .createChannel .entry:nth-child(1) {
+    left: 0px;
+    top: 0px;
+  }
 }
