--- a/src/components/BottomNav/BottomNav.css
+++ b/src/components/BottomNav/BottomNav.css
@@ -1,9 +1,9 @@
 /* nav태그 아래의 자식들을 수평정렬하기 위한 설정 */
-nav {
+.bottomNavWrapper {
   overflow: hidden;
 }
 /* nav태그 아래의 div태그들을 수평정렬 및 세로길이 설정 */
-nav > div {
+.bottomNavWrapper > div {
   /* 수평정렬, 5개의 button을 각각 20% width만큼 할당 */
   text-align: center;
   float: left;
