style: 미디어쿼리 반응형

--- a/src/components/Aside/test.css
+++ b/src/components/Aside/test.css
@@ -52,3 +52,10 @@
   display: flex;
   margin-bottom: 10px;
 }
+
+@media (max-width: 766px) {
+  .chatbox {
+    border-radius: 15px;
+    width: 330px;
+  }
+}
