--- a/src/components/ChatRoom/ChatRoom.css
+++ b/src/components/ChatRoom/ChatRoom.css
@@ -84,3 +84,9 @@
   --saf-0: rgba(var(--sk_foreground_low, 29, 28, 29), 0.13);
   box-shadow: 0 0 0 1px var(--saf-0), 0 1px 3px 0 rgba(0, 0, 0, 0.08);
 }
+
+@media (max-width: 766px) {
+  .a1 {
+    width: 94%;
+  }
+}
