feat: 채팅페이지에서 스크롤방지

--- a/src/components/Aside/test.css
+++ b/src/components/Aside/test.css
@@ -53,6 +53,9 @@
   margin-bottom: 10px;
 }
 
+.scrollLock {
+  overflow: hidden;
+}
 @media (max-width: 766px) {
   .chatbox {
     border-radius: 15px;
