--- a/src/components/ChatRoom/ChatRoom.css
+++ b/src/components/ChatRoom/ChatRoom.css
@@ -88,5 +88,7 @@
 @media (max-width: 766px) {
   .a1 {
     width: 94%;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   }
 }
