--- a/src/components/MyChatList/ChatList.css
+++ b/src/components/MyChatList/ChatList.css
@@ -44,14 +44,14 @@
 }
 
 .ChatList .ScrollbarsCustom-Track.ScrollbarsCustom-TrackY {
-  background-color: white !important;
+  background-color: transparent !important;
   width: 5px !important;
   left: 320px !important;
   /* height: 100% !important; */
 }
 
 .ChatList .ScrollbarsCustom-Thumb.ScrollbarsCustom-ThumbY {
-  background: #dddddd !important;
+  background: transparent !important;
   /* height: 95px !important; */
 }
 .ddd {
