--- a/src/components/ChatRoom/ChatRoom.css
+++ b/src/components/ChatRoom/ChatRoom.css
@@ -87,7 +87,8 @@
 
 @media (max-width: 766px) {
   .a1 {
-    width: 94%;
+    width: 98%;
+    margin-left: 2px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   }
