--- a/src/components/Aside/test.css
+++ b/src/components/Aside/test.css
@@ -85,4 +85,55 @@
     top: 7px;
     left: calc(var(--vw) * 82 - 15px);
   }
+  .dropdown {
+    font-size: 10px;
+    width: calc(var(--vw) * 20.5);
+    top: 0px;
+    left: calc(var(--vw) * 64.5);
+    user-select: none;
+    position: relative;
+    z-index: 100;
+  }
+
+  .dropdown .arrow {
+    width: 10px;
+    height: 5px;
+  }
+
+  .dropdown .dropdown-btn {
+    padding: 0px 10px;
+    /* background-color: #fff; */
+    /* box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06); */
+    /* font-weight: bold; */
+    /* color: #333; */
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    justify-content: space-between;
+  }
+
+  .dropdown .dropdown-content {
+    position: absolute;
+    top: -6px;
+    left: 0;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    font-weight: 500;
+    color: #333;
+    width: 100%;
+  }
+
+  .dropdown .dropdown-content .dropdown-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6px 10px;
+    cursor: pointer;
+    transition: all 0.5s;
+  }
+
+  .dropdown .dropdown-content .dropdown-item:hover {
+    background-color: #f4f4f4;
+  }
 }
