--- a/src/components/ChatRoom/ChatRoom.css
+++ b/src/components/ChatRoom/ChatRoom.css
@@ -88,7 +88,7 @@
 @media (max-width: 766px) {
   .a1 {
     width: calc(var(--vw) * 82);
-    margin-left: 3%;
+    margin-left: calc(var(--vw) * 3.5);
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   }
