fix: 스크롤바 안보이게 하기, 데스크톱 오류 수정

--- a/src/components/ChatList/ChatList.css
+++ b/src/components/ChatList/ChatList.css
@@ -44,14 +44,14 @@
 }
 
 .ChatList .ScrollbarsCustom-Track.ScrollbarsCustom-TrackY {
-  background-color: transparent !important;
+  background-color: white !important;
   width: 5px !important;
   left: 320px !important;
   /* height: 100% !important; */
 }
 
 .ChatList .ScrollbarsCustom-Thumb.ScrollbarsCustom-ThumbY {
-  background: transparent !important;
+  background: #dddddd !important;
   /* height: 95px !important; */
 }
 .ddd {
@@ -70,4 +70,14 @@
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.5);
   color: #ffffff;
+}
+
+@media (max-width: 766px) {
+  .ChatList .ScrollbarsCustom-Track.ScrollbarsCustom-TrackY {
+    background-color: transparent !important;
+  }
+
+  .ChatList .ScrollbarsCustom-Thumb.ScrollbarsCustom-ThumbY {
+    background: transparent !important;
+  }
 }
