--- a/src/components/MyChatList/ChatList.css
+++ b/src/components/MyChatList/ChatList.css
@@ -44,14 +44,14 @@
 }
 
 .ChatList .ScrollbarsCustom-Track.ScrollbarsCustom-TrackY {
-  background-color: transparent !important;
+  background-color: white !important;
   width: 5px !important;
   left: 320px !important;
   /* height: 100% !important; */
 }
 
 .ChatList .ScrollbarsCustom-Thumb.ScrollbarsCustom-ThumbY {
-  background: transparent !important;
+  background: #dddddd !important;
   /* height: 95px !important; */
 }
 .ddd {
@@ -60,4 +60,14 @@
   width: 200px;
   height: 200px;
   top: 285px;
+}
+
+@media (max-width: 766px) {
+  .ChatList .ScrollbarsCustom-Track.ScrollbarsCustom-TrackY {
+    background-color: transparent !important;
+  }
+
+  .ChatList .ScrollbarsCustom-Thumb.ScrollbarsCustom-ThumbY {
+    background: transparent !important;
+  }
 }
