fix: **중요** 채팅방 생성 인풋 태그 사용시 UI 자판 밀림현상 수정

--- a/src/components/MoblieCreateChannel/MobileCreateChannel.css
+++ b/src/components/MoblieCreateChannel/MobileCreateChannel.css
@@ -288,7 +288,7 @@
 
 @media (max-width: 766px) {
   .createChannel .modal {
-    width: 90vw;
+    width: calc(var(--vw) * 90);
     height: calc(var(--vh) * 100);
     border-radius: 0px;
   }
