--- a/src/components/ChatBeforeModal2/ChatBeforeModal2.css
+++ b/src/components/ChatBeforeModal2/ChatBeforeModal2.css
@@ -23,10 +23,10 @@
 .ChatBeforeModal2 .closeButton {
   cursor: pointer;
   position: absolute;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   top: 20px;
-  left: calc(100vw - 50px);
+  left: calc(100vw - 10px);
 }
 
 .ChatBeforeModal2 .yellowButton {
@@ -34,11 +34,9 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 80%;
-  height: 30px;
   /* margin: 36px 20px 19px 0; */
   margin-bottom: 19px;
-  padding: 9px;
+  /* padding: 9px; */
   /* padding: 8px 80px 10px 1px; */
   border-radius: 5px;
   background-color: #ffe576;
@@ -144,5 +142,59 @@
     width: calc(var(--vw) * 100);
     height: calc(var(--vh) * 100);
     border-radius: 0px;
+    align-items: center;
+  }
+  .ChatBeforeModal2 .closeButton {
+    cursor: pointer;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 15px;
+    left: calc(var(--vw) * 100 - 35px);
+  }
+  .ChatBeforeModal2 .textArea {
+    position: absolute;
+    width: calc(var(--vw) * 100);
+
+    top: calc(var(--vh) * 30);
+    left: 0;
+    z-index: 100;
+  }
+  .ChatBeforeModal2 .modalTag {
+    font-size: 18px;
+    font-weight: 700;
+  }
+  .ChatBeforeModal2 .modalTitle {
+    max-width: calc(var(--vw) * 100);
+    font-size: 22px;
+    font-weight: 700;
+    text-overflow: clip;
+  }
+  .ChatBeforeModal2 .modalTimeLimit {
+    font-size: 12px;
+  }
+  .ChatBeforeModal2 .modalDate {
+    margin-top: 5px;
+    font-size: 12px;
+  }
+
+  .ChatBeforeModal2 .modalBee {
+    position: absolute;
+
+    z-index: 100;
+    top: calc(var(--vh) * 48);
+    left: calc(var(--vw) * 32);
+    width: calc(var(--vw) * 70);
+    height: calc(var(--vh) * 50);
+  }
+  .ChatBeforeModal2 .yellowButton {
+    padding: 12px calc(var(--vw) * 30);
+    font-size: 16px;
+    position: absolute;
+    top: calc(var(--vh) * 48 + var(--vh) * 42);
+    left: calc(var(--vh) * 3.5);
+    border-radius: 10px;
+    margin-bottom: 30px;
+    z-index: 1000;
   }
 }
