feat: 모바일 채팅 기능 구현

--- a/src/components/ChatChat/ChatChat.css
+++ b/src/components/ChatChat/ChatChat.css
@@ -334,4 +334,10 @@
     background: transparent !important;
     /* height: 95px !important; */
   }
+  .drawerWrapper .exit {
+    top: calc(var(--vh) * 92);
+  }
+  .drawerWrapper .trick {
+    top: calc(var(--vh) * 92);
+  }
 }
