fix: 스크롤바 영역에 가려 채팅이 클릭이 안되는 오류 수정

--- a/src/components/ChatChat/MobileChatChat.css
+++ b/src/components/ChatChat/MobileChatChat.css
@@ -330,6 +330,10 @@
     /* height: 100% !important; */
   }
 
+  .mobileChat .ScrollbarsCustom {
+    height: 95% !important;
+  }
+
   .mobileChat .ScrollbarsCustom-Thumb.ScrollbarsCustom-ThumbY {
     background: transparent !important;
     /* height: 95px !important; */
