--- a/src/components/ChatChat/ChatChat.css
+++ b/src/components/ChatChat/ChatChat.css
@@ -308,7 +308,9 @@
   padding: 2px 0 0 0px;
   background-color: white;
 }
-
+.chat .ScrollbarsCustom {
+  height: 95% !important;
+}
 .chat .ScrollbarsCustom-Track.ScrollbarsCustom-TrackY {
   background-color: white !important;
   width: 5px !important;
