--- a/src/components/ChatChat/drawer.css
+++ b/src/components/ChatChat/drawer.css
@@ -32,16 +32,20 @@
 }
 
 @media (max-width: 766px) {
-  .EZDrawer__container {
+  .mobileChat .EZDrawer__container {
     width: calc(var(--vw) * 75) !important;
     height: calc(var(--vh) * 100) !important;
   }
-  .EZDrawer .EZDrawer__overlay {
+  .mobileChat .EZDrawer .EZDrawer__overlay {
     display: none;
     height: calc(var(--vh) * 100) !important;
     left: 0;
     position: absolute;
     top: 0;
     width: 100%;
+  }
+  .chatInput .EZDrawer__container {
+    width: calc(var(--vw) * 100) !important;
+    height: calc(var(--vh) * 20) !important;
   }
 }
