--- a/src/components/VoiceChatZZone/voiceChatChat.css
+++ b/src/components/VoiceChatZZone/voiceChatChat.css
@@ -187,7 +187,10 @@
   border: none;
   outline: none;
 }
-
+.voiceChatZZone .voiceChatStyle {
+  width: 330px !important;
+  height: 100px !important;
+}
 .voiceChatZZone .NoticeButton {
   font-weight: bold;
   font-size: 13px;
@@ -207,4 +210,15 @@
   background: white;
   border: none;
   outline: none;
+}
+
+@media (max-width: 766px) {
+  .voiceChatZZone {
+    width: calc(var(--vw) * 100) !important;
+    height: calc(var(--vh) * 20) !important;
+  }
+  .voiceChatZZone .voiceChatStyle {
+    width: calc(var(--vw) * 100) !important;
+    height: calc(var(--vh) * 20) !important;
+  }
 }
