fix: 햄버거 드로어 채팅방나가기 위치수정

--- a/src/components/VoiceChat/VoiceChat.css
+++ b/src/components/VoiceChat/VoiceChat.css
@@ -320,3 +320,12 @@
   background: #dddddd !important;
   /* height: 95px !important; */
 }
+
+@media (max-width: 766px) {
+  .drawerWrapper .exit {
+    top: calc(var(--vh) * 92);
+  }
+  .drawerWrapper .trick {
+    top: calc(var(--vh) * 92);
+  }
+}
