fix: 데스크톱 웹 플러스버튼 누르면 드로어 올라오게 수정

--- a/src/components/ChatBox/ChatWraper.css
+++ b/src/components/ChatBox/ChatWraper.css
@@ -222,3 +222,10 @@ textarea:focus {
   background-color: #111111;
   border-radius: 100%;
 }
+
+.chatWrapper {
+  display: flex;
+  flex-direction: column;
+  z-index: 0;
+  background-color: white;
+}
