--- a/src/components/ChatChat/ChatChat.css
+++ b/src/components/ChatChat/ChatChat.css
@@ -60,6 +60,7 @@
   background-color: white;
   display: flex;
   justify-content: space-between;
+  border-bottom: solid 1px #f4f4f4;
   /* border-bottom: solid 0.5px; */
 }
 
