fix: 오른쪽 드로어와 겹치는 에러 해결

--- a/src/components/ChatBox/ChatWraper.css
+++ b/src/components/ChatBox/ChatWraper.css
@@ -226,6 +226,6 @@ textarea:focus {
 .chatWrapper {
   display: flex;
   flex-direction: column;
-  z-index: 0;
+  z-index: var(--deskTopBottomDrawerZindex);
   background-color: white;
 }
