refactor: #8 - 채팅 문자 레이아웃이 더 튀어나오는 UI 버그를 수정합니다.

--- a/src/components/ChatBox/ChatWraper.css
+++ b/src/components/ChatBox/ChatWraper.css
@@ -145,6 +145,7 @@ textarea:focus {
 }
 
 .chatZZone .counterpartChat .details .chatContent {
+  width: fit-content;
   background: #ffe576;
   color: black;
   border-radius: 0px 14px 14px 14px;
