--- a/src/components/BottomNav/BottomNav.css
+++ b/src/components/BottomNav/BottomNav.css
@@ -22,7 +22,7 @@
 
 .bottomNavWrapper {
   box-shadow: 0px -5px 6px -5px rgba(136, 135, 135, 0.7);
-
+  z-index: 1000;
   background-color: #fff;
   position: fixed;
   bottom: 0;
